--- a/BlazorXO.Game/BlazorXO.Game/Components/XO.razor
+++ b/BlazorXO.Game/BlazorXO.Game/Components/XO.razor
@@ -1,7 +1,7 @@
 @page "/xo"
 @using BlazorXO.Game.Engine;
 
-<button onclick="@ChangeCellType" style="width: @Width ; height: @Height ;">
+<button @onclick="@ChangeCellType" style="width: @Width ; height: @Height; background-color: @(Cell.IsHighlighted ? "yellow" : "white"); ">
     @switch (Cell.CellType)
     {
         case BoardCellType.Empty:
@@ -13,6 +13,10 @@
 
         case BoardCellType.O:
             <span>O</span>
+            break;
+
+        case BoardCellType.Disabled:
+            <span style="background-color: black"> </span>
             break;
     }
 </button>
