--- a/BlazorXO.Game/BlazorXO.Game/Components/Board.razor
+++ b/BlazorXO.Game/BlazorXO.Game/Components/Board.razor
@@ -17,7 +17,7 @@
             @for (int j = 0; j < 3; j++)
             {
                 <div class="col-sm">
-                    <XO width="100%" height="100%" Cell="@engine.Map[i, j]" CellClicked="@XOClicked" />
+                    <XO width="100%" height="100%" Cell="@engine.Board[i, j]" CellClicked="@XOClicked" />
                 </div>
             }
         </div>
