--- a/BlazorXO.Game/BlazorXO.Game/Components/XO.razor
+++ b/BlazorXO.Game/BlazorXO.Game/Components/XO.razor
@@ -21,7 +21,7 @@
     }
 </button>
 
-@functions {
+@code {
     [Parameter] public EventCallback<BoardCell> CellClicked { get; private set; }
 
     [CascadingParameter] BoardCell Cell { get; set; }
