--- a/BlazorXO.Game/BlazorXO.Game/Pages/Game.razor
+++ b/BlazorXO.Game/BlazorXO.Game/Pages/Game.razor
@@ -2,31 +2,31 @@
 @using BlazorXO.Game.Engine;
 @inject GameEngine engine;
 
-<h1>Board</h1>
+<h1>Welcome to the Blazor Tic Tac Toe!</h1>
 
-
-<div style="background: red; visibility: @(ShowFinishBanner?"visible":"hidden"); ">
-    GAME HAS FINISHED
-</div>
 
 <div class="container">
-    @for (int i = 0; i < 3; i++)
+    @for (int i = 0; i < engine.Board.BoardHeigth; i++)
     {
         <div class="row" style="height: 50px;">
-            @for (int j = 0; j < 3; j++)
+            @for (int j = 0; j < engine.Board.BoardWidth; j++)
             {
                 <div class="col-sm">
-                    <XO width="100%" height="100%" Cell="@engine.Board[i, j]" CellClicked="@XOClicked" />
+                    <XO width="100%" height="100%" Cell="@engine.Board[i, j]" CellClicked="@OnCellClicked" />
                 </div>
             }
         </div>
     }
 </div>
+<br />
+<div class="container" style="background: red; visibility: @(ShowFinishBanner?"visible":"hidden"); ">
+    GAME HAS FINISHED
+</div>
 
 @code {
     bool ShowFinishBanner { get; set; } = false;
 
-    void XOClicked(BoardCell clickedCell)
+    void OnCellClicked(BoardCell clickedCell)
     {
         if (this.engine.IsGameFinished)
         {
